Fix UPI payment link for Ultimate Tweaks package

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <a class="btn" href="upi://pay?pa=6203924526@fam&pn=YNOT%20CORPORATION&am=999&cu=INR&tn=Gaming%20Pro%20Pack">Pay ₹799 – Gaming Pro Pack</a><br><br>
 
-<a class="btn" href="upi://pay?pa=6203924526@fam&pn=YNOT%20CORPORATION&am=1999&cu=INR&tn=Ultimate%20Tweaks">Pay ₹1200 – Ultimate Tweaks</a>
+<a class="btn" href="upi://pay?pa=6203924526@fam&pn=YNOT%20CORPORATION&am=1999&cu=INR&tn=Ultimate%20Tweaks">Pay ₹1200 – Ultimate Tweaks</a><br><br>
 
 <p style="margin-top:15px;font-size:14px;opacity:0.8;">UPI Apps supported: GPay, PhonePe, Paytm, BHIM</p>
 
